--- a/ProAcc/Views/Report/OverAllTaskReport.cshtml
+++ b/ProAcc/Views/Report/OverAllTaskReport.cshtml
@@ -262,7 +262,7 @@
 <script>
     //document.body.style.zoom = "80%";
     $(document).ready(function () {
-        LoadTable(1);
+        //LoadTable(1);
     });
     $(window).on("resize", function () {
   var $grid = $("#jqGrid"),
