--- a/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
+++ b/ProAcc/Views/Activity/_ActivityCreationCreate.cshtml
@@ -34,17 +34,34 @@
                     &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblTask">&nbsp;</span>
                 </div>
             </div>
-
-            @*<div class="form-group">
-                <label class="control-label col-md-6 required">Application Area</label>
+            <div class="form-group">
+                <label class="control-label col-md-4 required">Phase</label>
                 <div class="col-md-10">
-                    <input type="text" class="form-control" id="txtApplicationArea" />
-                    <input type="hidden" id="hiddenActivityId" />
+                    <input id="drphiddenPhase" type="hidden" />
+                    <select class="form-control" id="drpPhase">
+                        <option value="0">Select Phase</option>
+                        @foreach (var item in ViewBag.Phase)
+                        {
+                            <option value="@item.Id">@item.PhaseName</option>
+                        }
+                    </select>
+                    @*<input type="text" class="form-control" id="txtPhase" maxlength="10" />*@
+                    @*<span id="lblPhase" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblApplicationArea">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblPhase">&nbsp;</span>
                 </div>
-            </div>*@
+            </div>
+            @*<div class="form-group">
+            <label class="control-label col-md-6 required">Application Area</label>
+            <div class="col-md-10">
+                <input type="text" class="form-control" id="txtApplicationArea" />
+                <input type="hidden" id="hiddenActivityId" />
+            </div>
+            <div>
+                &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblApplicationArea">&nbsp;</span>
+            </div>
+        </div>*@
 
             <div class="form-group">
                 <label class="control-label col-md-4 required">Application Area</label>
@@ -67,22 +84,24 @@
 
         <div class="col-6">
 
+            
+
             <div class="form-group">
-                <label class="control-label col-md-4 required">Phase</label>
+                <label class="control-label col-md-4 required">Building Block</label>
                 <div class="col-md-10">
-                    <input id="drphiddenPhase" type="hidden" />
-                    <select class="form-control" id="drpPhase">
-                        <option value="0">Select Phase</option>
-                        @foreach (var item in ViewBag.Phase)
+                    <input id="drphiddenBlock" type="hidden" />
+                    <select class="form-control" id="drpBlock">
+                        <option value="0">Select Building Block</option>
+                        @foreach (var item in ViewBag.Block)
                         {
-                            <option value="@item.Id">@item.PhaseName</option>
+                            <option value="@item.block_ID">@item.Block_Name</option>
                         }
                     </select>
                     @*<input type="text" class="form-control" id="txtPhase" maxlength="10" />*@
                     @*<span id="lblPhase" style="color:red" />*@
                 </div>
                 <div>
-                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblPhase">&nbsp;</span>
+                    &nbsp;&nbsp;&nbsp;<span class="Class_span" id="lblBlock">&nbsp;</span>
                 </div>
             </div>
 
@@ -242,14 +261,15 @@
         var ApplicationArea = $("#drpApplicationArea").val();
         var Phase = $('#drpPhase').val();
         var Role = $('#drpRole').val();
+        var Block = $('#drpBlock').val();
 
         var lblTask = $("#lblTask").text().trim();
         var lblApplicationArea = $("#lblApplicationArea").text().trim();
         var lblPhase = $('#lblPhase').text().trim();
         var lblRole = $('#lblRole').text().trim();
-
-        if (Task.length > 0 && ApplicationArea != 0 && Phase != 0 && Role != 0 &&
-            lblTask == "" && lblApplicationArea=="" &&  lblPhase == "" && lblRole == "") {
+        var lblBlock=$('#lblBlock').text().trim();
+        if (Task.length > 0 && ApplicationArea != 0 && Phase != 0 && Role != 0 && Block !=0 &&
+            lblTask == "" && lblApplicationArea=="" &&  lblPhase == "" && lblRole == "" && lblBlock=="" ) {
 
              $("#btnActivityCreCreate").prop("disabled", false);
              $("#btntivityCreUpdate").prop("disabled", false);
@@ -268,9 +288,11 @@
         var ApplicationArea = $("#drpApplicationArea").val();
         var Phase = $('#drpPhase').val();
         var Role = $('#drpRole').val();
+        var BlockId=$('#drpBlock').val();
         var model = {
             Task: Task,
             PhaseID: Phase,
+            BuildingBlock_id: BlockId,
             //Sequence_Num: sequence,
             ApplicationAreaID: ApplicationArea,
             RoleID:Role
@@ -292,6 +314,11 @@
         else if (Role == 0)
         {
             $("#lblRole").html("Please select the Role").show().fadeOut(5000);
+            ValidateActivity();
+        }
+         else if (BlockId == 0)
+        {
+            $("#lblBlock").html("Please select the Building Block").show().fadeOut(5000);
             ValidateActivity();
         }
 
@@ -391,12 +418,14 @@
         var Role = $('#drphiddenRole').val();
         var cre_on = $("#actcre_on").val();
         var cre_By = $("#actcre_By").val();
+        var BlockId=$('#drpBlock').val();
 
          var model = {
              Activity_ID:id,
             Task: Task,
             PhaseID: Phase,
-            Sequence_Num: sequence,
+             Sequence_Num: sequence,
+             BuildingBlock_id: BlockId,
             ApplicationAreaID: ApplicationArea,
             RoleID:Role,
             Cre_on: cre_on,
@@ -420,6 +449,11 @@
         {
            $("#lblRole").html("Please select the Role").show().fadeOut(5000);
            ValidateActivity();
+       }
+            else if (BlockId == 0)
+        {
+            $("#lblBlock").html("Please select the Building Block").show().fadeOut(5000);
+            ValidateActivity();
         }
         else {
 
