--- a/ProAcc/Views/Report/_AuditReportIndex.cshtml
+++ b/ProAcc/Views/Report/_AuditReportIndex.cshtml
@@ -47,7 +47,7 @@
     $(document).ready(function () {
 
         $("#tblAudit").dataTable({
-
+            "order": [[3, 'desc']]
         });
     });
 
