Audit For all Change Tables

--- a/ProAcc/Views/ProjectMonitor/Monitor.cshtml
+++ b/ProAcc/Views/ProjectMonitor/Monitor.cshtml
@@ -128,10 +128,17 @@
             datatype: "json",
            // editurl: "@Url.Action("SubmitProjectMonitor","ProjectMonitor")",
             colModel: [
-                {
+                 {
                     label: 'Id', name: 'Id', index: 'Id', width: 70,
                      align: 'center', editable: true, hidden: true,
                 },
+                //{
+                //    label: 'Building Block', name: 'PhaseId', index: 'PhaseId', width: 100, editable: false, classes: 'wrapColumnText',
+                //    cellEdit: true, edittype: 'select', formatter: 'select',
+                //   editoptions: {
+                //        value: GetBlock()
+                //    }
+                //},
                 {
                     label: 'Phase', name: 'PhaseId', index: 'PhaseId', width: 70,
                      align: 'center', editable: true, hidden: true, edittype: 'custom',
@@ -139,7 +146,7 @@
                     editrules: {
                         required: true,
                         edithidden: true
-                    },
+                    }, 
                     editoptions: {
                         value: GetPhaseDropDown()
                     }
@@ -873,6 +880,32 @@
 		'true': 'Yes', 'false': 'False'
 	};
 	return Status;
+    }
+
+    function GetBlock() {
+        debugger;
+    var Parameters = {};
+    $.ajax({
+        type: "POST",
+        url: '@Url.Action("GetBlocks","ProjectMonitor")',
+        //data: '{Phase: ' + JSON.stringify(Phase) + ',condition:' + JSON.stringify(condition) + '}',
+        dataType: "json",
+		async: false,
+        contentType: "application/json; charset=utf-8",
+        success: function (Data) {
+            debugger;
+				for (var i = 0; i < Data.length; i++) {
+                var obj = {};
+                    var Name = Data[i].Name;
+                var key = ""+Data[i].UserId;
+                Parameters[key] = Name;
+            }
+        },
+        error: function (data) {
+            alert("GetAllUser fail");
+        }
+    });
+	return Parameters;
     }
 
     function GetUserDropDown() {
