--- a/ProAcc/Views/Report/AuditReports.cshtml
+++ b/ProAcc/Views/Report/AuditReports.cshtml
@@ -34,8 +34,8 @@
                 @Html.DropDownList("Actiondropdown", new List<SelectListItem>
                  {
                    new SelectListItem { Text = "Insert", Value = "Insert"},
-                   new SelectListItem { Text = "Update", Value = "Update"},
-                   new SelectListItem { Text = "Delete", Value = "Delete"}
+                   new SelectListItem { Text = "Update", Value = "Update"}
+                   //new SelectListItem { Text = "Delete", Value = "Delete"}
                    }, "- Select -",new { @class = "form-control" })
             </div>
 
