--- a/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
+++ b/ProAcc/Views/ProjectCreation/_ProjectCreationIndex.cshtml
@@ -18,6 +18,7 @@
             <th>Project Name</th>
             <th>Cre_on</th>
             <th>Customer Name</th>
+            <th>Scenario</th>
             <th>Project Manager</th>
             <th>Description</th>
             <th>Actions</th>
@@ -26,28 +27,31 @@
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    <a class="txtG" value="@item.Project_Name">@item.Project_Name</a>
-                </td>
-                <td>
-                    <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
-                </td>
-                <td>
-                    <a class="txtG" value="@item.Customer_Id">@item.Customer.Company_Name</a>
-                </td>
-                <td>
-                    <a class="txtG" value="@item.ProjectManager_Id">@item.UserMaster.Name</a>
-                </td>
-                <td>
-                    <a class="txtG" value="@item.Description">@item.Description</a>
-                </td>
+        <tr>
+            <td>
+                <a class="txtG" value="@item.Project_Name">@item.Project_Name</a>
+            </td>
+            <td>
+                <a class="txtG" value="@item.Cre_on">@item.Cre_on</a>
+            </td>
+            <td>
+                <a class="txtG" value="@item.Customer_Id">@item.Customer.Company_Name</a>
+            </td>
+            <td>
+                <a class="txtG" value="@item.ScenarioId">@item.ScenarioMaster.ScenarioName</a>
+            </td>
+            <td>
+                <a class="txtG" value="@item.ProjectManager_Id">@item.UserMaster.Name</a>
+            </td>
+            <td>
+                <a class="txtG" value="@item.Description">@item.Description</a>
+            </td>
 
-                <td>
-                    <a href="#" id="btnprjtEdit" class="editProjectCreation fa fa-edit"></a><input type="hidden" value="@item.Project_Id" /> |
-                    <a href="#" class="btnProjCreationDelete fa fa-trash"></a><input type="hidden" value="@item.Project_Id" />
-                </td>
-            </tr>
+            <td>
+                <a href="#" id="btnprjtEdit" class="editProjectCreation fa fa-edit"></a><input type="hidden" value="@item.Project_Id" /> |
+                <a href="#" class="btnProjCreationDelete fa fa-trash"></a><input type="hidden" value="@item.Project_Id" />
+            </td>
+        </tr>
         }
     </tbody>
 </table>
@@ -84,6 +88,7 @@
                 $("#txtProjectName").val(result.Project_Name);
                 $("#drpCustomer").val(result.Customer_Id);
                 $("#drpProjectManager").val(result.ProjectManager_Id);
+                $("#drpScenario").val(result.ScenarioId);
                 $("#txtDescription").val(result.Description);
                 $("#projcre_on").val(result.Cre_on);
                 $("#projcre_By").val(result.Cre_By);
