--- a/ProAcc/Views/User/Index.cshtml
+++ b/ProAcc/Views/User/Index.cshtml
@@ -41,7 +41,7 @@
             <th>
                 Customer Name
             </th>
-
+            <th>Status</th>
             <th>Actions</th>
         </tr>
     </thead>
@@ -56,7 +56,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Cre_on,"{MM/dd/yyyy}")
+                @Html.DisplayFor(modelItem => item.Cre_on, "{MM/dd/yyyy}")
             </td>
             @Html.HiddenFor(modelItem => item.UserId)
             <td>
@@ -81,16 +81,36 @@
                 @Html.DisplayFor(modelItem => item.Customer.Company_Name)
             </td>
 
-            <td>
+            @if (item.isActive == true)
+            {
+                <td>
+                    <a class="txtG" value="@item.isActive">Active</a>
+                </td>
+                <td>
+                    <div class="row">
+                        &nbsp;&nbsp;&nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("Edit", "User", new { id = item.UserId })"></a> &nbsp;&nbsp;
+                        &nbsp;<a href="#" class="userDelete fa fa-trash"></a><input type="hidden" value="@item.UserId" />
+                    </div>
+
+                </td>
+            }
+            else
+            {
+                <td>
+                <a class="txtG" value="@item.isActive">In Active</a>
+                </td>
+                <td>
+                    <a class="txtG" value="@item.isActive"></a>
+                </td>
+            }
+
+
+            @*<td>
                 <div class="row">
                     &nbsp;&nbsp;&nbsp;&nbsp;<a class="fa fa-edit" data-toggle="tooltip" data-placement="top" title="Edit!" href="@Url.Action("Edit", "User", new { id = item.UserId })"></a> &nbsp;&nbsp;
                     &nbsp;<a href="#" class="userDelete fa fa-trash"></a><input type="hidden" value="@item.UserId" />
                 </div>
-
-                @*@Html.ActionLink("Edit", "Edit", new { id = item.UserId }) |
-            @Html.ActionLink("Details", "Details", new { id = item.UserId }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.UserId, @class = "userDelete" })*@
-            </td>
+            </td>*@
         </tr>
         }
     </tbody>
